--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -1,6 +1,31 @@
 {% extends "layout.html" %}
-
 {% block content %}
+    <br>
     <h2>Accueil</h2>
-    <button class="btn btn-primary">Un bouton bt</button>
-{% endblock %}
+    <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 g-3">
+                {% for cat in liste_cat %}
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img loading="lazy" src="/static/images/{{ cat.image_maison }}" alt="image"/>
+                            <div class="card-body">
+                                <p class="card-text">
+                                    <span class="titre">
+                                        <a href="{{ url_for('produits_categorie') }}?type_maison={{ cat.type_maison }}">{{ cat.type_maison }}</a>
+                                    </span>
+                                </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group" id="remove_a">
+                                    </div>
+                                    <div class="btn-group">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+{% endblock content %}
