--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('montrer_produits') }}">Nos produits</a>
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('produits') }}">Nos Maisons</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">***</a>
+                    <a class="nav-link" href="{{ url_for('ajouter_produit') }}">Ajouter une maison</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">***</a>
