--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,11 +10,12 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ url_for('produits') }}">Nos Maisons</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('ajouter_produit') }}">Ajouter une maison</a>
+                    <a class="nav-link" href="{{ url_for('about') }}">À propos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">***</a>
+                    <a class="nav-link" href="{{ url_for('search') }}">Recherche</a>
                 </li>
             </ul>
         </div>
